syntax = "proto3";

package vpp;

option go_package = "github.com/ligato/vpp-agent/api/models/vpp;vpp";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
option (gogoproto.messagename_all) = true;

import "vpp/acl/acl.proto";
import "vpp/interfaces/interface.proto";
import "vpp/ipsec/ipsec.proto";
import "vpp/l2/bridge-domain.proto";
import "vpp/l2/fib.proto";
import "vpp/l2/xconnect.proto";
import "vpp/l3/arp.proto";
import "vpp/l3/l3.proto";
import "vpp/l3/route.proto";
import "vpp/nat/nat.proto";
import "vpp/punt/punt.proto";

message Data {
    repeated interfaces.Interface interfaces = 10;

    repeated acl.Acl acls = 20;

    repeated l2.BridgeDomain bridge_domains = 30;
    repeated l2.FIBEntry fibs = 31;
    repeated l2.XConnectPair xconnect_pairs = 32;

    repeated l3.Route routes = 40;
    repeated l3.ARPEntry arps = 41;
    l3.ProxyARP proxy_arp = 42;
    l3.IPScanNeighbor ipscan_neighbor = 43;

    nat.Nat44Global nat44_global = 50;
    repeated nat.DNat44 dnat44s = 51;

    repeated ipsec.SecurityPolicyDatabase ipsec_spds = 60;
    repeated ipsec.SecurityAssociation ipsec_sas = 61;

    repeated punt.IpRedirect punt_ipredirects = 70;
    repeated punt.ToHost punt_tohosts = 71;
}
